--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <style>
         table { 
             width: 100%;  
@@ -43,6 +44,7 @@
         }
     </style>
     <script>
+        
         function flipImage(img) { 
             img.classList.add("flip"); // Usar um pequeno atraso para garantir que a classe 'flip' seja aplicada antes de adicionar 'flipped' 
             setTimeout(function() { 
